--- a/index.html
+++ b/index.html
@@ -3,12 +3,32 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
+	
+	<link href="./style/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+	
 	<title>Fischer@Github</title>
 </head>
 
 <body>
-	<p style="color : #333; font-size : 10em;">
-		Let's add some interesting stuff here :)
-	</p>
+	
+	<header class="header">
+	
+		<h1 class="header-logo grid-container">
+			fs
+		</h1>
+		
+	</header>
+	
+	<article class="article grid-container">
+		
+		<section class="article-section">
+			
+			
+			
+		</section>
+	
+	</article>
+	
 </body>
+
 </html>
