UPDATE the article section module class in progress

--- a/index.html
+++ b/index.html
@@ -13,17 +13,34 @@
 	
 	<header class="header">
 	
-		<h1 class="header-logo grid-container">
-			fs
-		</h1>
+		<div class="header-body">
+		
+			<h1 class="header-logo">fs</h1>
+		
+		</div>
 		
 	</header>
 	
-	<article class="article grid-container">
+	<article class="article">
 		
 		<section class="article-section">
 			
+			<h2 class="article-section-title">article-section-title-h2</h2>
 			
+			<p class="article-section-content"></p>
+			
+			<section class="article-section">
+			
+				<h3 class="article-section-title">article-section-title-h3</h3>
+				<h4 class="article-section-title">article-section-title-h4</h4>
+				<h5 class="article-section-title">article-section-title-h5</h5>
+				<h6 class="article-section-title">article-section-title-h6</h6>
+				
+				<p class="article-section-content">
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+			
+			</section>
 			
 		</section>
 	
