--- a/testes6.html
+++ b/testes6.html
@@ -24,13 +24,13 @@ user = {
 evaluate = function (tag, func) {
 	try {
 	var u, 
-	    s = window.performance ? performance.now() : (new Date()).getTime();
+	    s = false ? performance.now() : (new Date()).getTime();
 
 	for (var i = 0; i < 500000; ++i) {
 			u = func();
 	}
 
-	var e = window.performance ? performance.now() : (new Date()).getTime();
+	var e = false ? performance.now() : (new Date()).getTime();
 
 	document.getElementById(tag).innerHTML = tag + " : " + (e - s);
 	} catch (e) {
