--- a/testes6.html
+++ b/testes6.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<div>5</div>
+<div>version : 6</div>
 <div id="old"></div>
 <div id="es6"></div>
 
@@ -42,7 +42,7 @@ calAVG = function (id, msArr) {
 	
 	for (i = msArr.length - 1; i >= 0; --i) sum += msArr[i];
 	
-	document.getElementById(id).innerHTML = "AVG " + id + " ms = " + (sum / msArr.length);
+	document.getElementById(id).innerHTML = "Avg " + id + " ms = " + (sum / msArr.length);
 },
 
 old = function () {
