--- a/testes6.html
+++ b/testes6.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<div>version : 13</div>
+<div>version : 14</div>
 <div id="old"></div>
 <div id="es6"></div>
 
@@ -96,8 +96,8 @@ old2account = function () {
 	id = account.id,
 	name = account.user.name,
 	street = account.user.addr.street,
-	APPL = account.portfolio.stock.APPL,
-	number = account.portfolio.bond.GOOG.number;
+	APPL = account.user.portfolio.stock.APPL,
+	number = account.user.portfolio.bond.GOOG.number;
 },
 
 es62account = function () {
