--- a/testes6.html
+++ b/testes6.html
@@ -7,9 +7,11 @@
 </head>
 
 <body>
-<div>version : 15</div>
-<div id="old"></div>
-<div id="es6"></div>
+<div>version : 16</div>
+<div id="old2user"></div>
+<div id="es62user"></div>
+<div id="old2account"></div>
+<div id="es62account"></div>
 
 <script>
 
