--- a/testes6.html
+++ b/testes6.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<div>version : 19</div>
+<div>version : 20</div>
 <div id="old2user"></div>
 <div id="es62user"></div>
 <div id="old2account"></div>
@@ -169,6 +169,9 @@ for (i = 0; i < 30; ++i) {
 	es6s2user.push(evaluate(es62user));
 	olds2account.push(evaluate(old2account));
 	es6s2account.push(evaluate(es62account));
+}
+
+for (i = 0; i < 3; ++i) {
 	olds2array.push(evaluate(old2array));
 	es6s2array.push(evaluate(es62array));
 }
