--- a/testes6.html
+++ b/testes6.html
@@ -172,8 +172,8 @@ for (i = 0; i < 30; ++i) {
 }
 
 for (i = 0; i < 3; ++i) {
-	olds2array.push(evaluate(old_assign_to_complexArray));
-	es6s2array.push(evaluate(es6_assign_to_complexArray));
+	olds2complexArray.push(evaluate(old_assign_to_complexArray));
+	es6s2complexArray.push(evaluate(es6_assign_to_complexArray));
 }
 
 calAVG("old_assign_to_simple_obj", olds2simpleObj);
