--- a/testes6.html
+++ b/testes6.html
@@ -26,7 +26,7 @@
 
 <body>
 
-<div>version : 26</div>
+<div>version : 27</div>
 <table>
 </table>
 
@@ -214,7 +214,7 @@ old_assign_to_simpleArray = mkTestFunc(function old_assign_to_simpleArray() {
 	var
 	a0 = simpleArray[0],
 	a1 = simpleArray[1],
-	a2 = simpleArray[2]
+	a2 = simpleArray[2];
 }),
 
 es6_assign_to_simpleArray = mkTestFunc(function es6_assign_to_simpleArray() {
@@ -259,7 +259,6 @@ es6_for_of_simpleArray = mkTestFunc(function es6_for_of_simpleArray() {
 	
 	for (v of simpleArray);
 });
-;
 
 var i;
 
