--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Fischer@Github</title>
 </head>
 
 <body>
+  <a href="https://buy.line.me>https://buy.line.me</a>
+  <br/>  
+  <br/>
+  <br/>
   <a href="https://liff.line.me/1530376675-qxz2gEmo/t/?data=9-LrSrU-EgWrHWZZwmvkNqu_eKfpU4sOr3Euz0yH8I_TIfYlmuVLX1mPYOPWxN_GkCBfmX8BL1uCbVo8rVMx6a3zz7_t35xlE1ZoKM9UwNVcoXjgUM06jaM9dtO32YGpC6YrDKNE6ePll50bzpm0Kl2pysnU_W19kvMKKEXYO70J_cQQgyZAX8eCbfR2di_uBdC4SZ6oOiLzXf5_hG6002vrUkdyEHk8&internal_source=lineshoppingindex&internal_medium=10_menu_6&internal_campaign=202009_rakuten">
     https://liff.line.me/1530376675-qxz2gEmo/t/?data=9-LrSrU-EgWrHWZZwmvkNqu_eKfpU4sOr3Euz0yH8I_TIfYlmuVLX1mPYOPWxN_GkCBfmX8BL1uCbVo8rVMx6a3zz7_t35xlE1ZoKM9UwNVcoXjgUM06jaM9dtO32YGpC6YrDKNE6ePll50bzpm0Kl2pysnU_W19kvMKKEXYO70J_cQQgyZAX8eCbfR2di_uBdC4SZ6oOiLzXf5_hG6002vrUkdyEHk8&internal_source=lineshoppingindex&internal_medium=10_menu_6&internal_campaign=202009_rakuten
   </a>
