--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <a href="https://buy.line.me>https://buy.line.me</a>
+  <a href="https://buy.line.me">https://buy.line.me</a>
   <br/>  
   <br/>
   <br/>
